--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,21 @@ body{
     height: 100vh;
 }
 
+.inputValue{
+    background: whitesmoke;
+    border: none;
+    padding: 1em 2em;
+}
+.btn{
+    border: none;
+    margin: 1em;
+    background-color: silver;
+    color: #333;
+    padding: 1em 2em;
+    font-weight: bolder;
+    font-size: 18px;
+}
+
 .location{
     height: 30vh;
     width: 50%;
