--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,8 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -31,7 +33,7 @@ footer {
 
 .left {
   padding: 1em;
-  width: 30%;
+  width: 20em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -77,7 +79,7 @@ footer {
   background-color: #101634;
   border: none;
   border-radius: 20px;
-  width: 30%;
+  width: 20em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
