--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,6 +16,7 @@ footer{
 }
 .container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     height: 90vh;
@@ -25,7 +26,7 @@ footer{
 .left{
     //border: 2px solid blue;
     padding: 1em;
-    width: 30%;
+    width: 20em;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -61,7 +62,7 @@ footer{
     background-color: rgba(16, 22, 52, 1);
     border: none;
     border-radius: 20px;
-    width: 30%;
+    width: 20em;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
